@@ -9,6 +9,8 @@ Things to be added:
 7) MS Windows support.
 8) ACL support.
 9) HTTP status monitor.
+10) Cluster adjustment.
+
 
 
 
