@@ -2,6 +2,7 @@
 Version 1.5.1.0 'Calder':
 	- C++ compatible headers and build.
 	- C++ library header. 
+	- HTML-formatted development reference.
 	
 01/15/2013 Oleg Moskalenko <mom040267@gmail.com>
 Version 1.5.0.0 'Calder':
